refactor: modified translations

--- a/src/locales/translations/ur.json
+++ b/src/locales/translations/ur.json
@@ -1,6 +1,6 @@
 {
   "demo": {
-    "title": "German",
-    "introduction": "Lorem Ipsum ist einfach Dummy-Text der Druck- und Satzindustrie. Lorem Ipsum ist seit dem 16. Jahrhundert der Standard-Dummy-Text der Branche, als ein unbekannter Drucker eine Galeere vom Typ nahm und sie zu einem Musterbuch verschlüsselte. Es hat nicht nur fünf Jahrhunderte überlebt, sondern auch den Sprung in den elektronischen Satz, der im Wesentlichen unverändert geblieben ist. Es wurde in den 1960er Jahren mit der Veröffentlichung von Letraset-Blättern mit Lorem Ipsum-Passagen und in jüngerer Zeit mit Desktop-Publishing-Software wie Aldus PageMaker einschließlich Versionen von Lorem Ipsum populär gemacht."
+    "title": "اردو",
+    "introduction": "شاعت اور گرافک ڈیزائن میں ، لوریم آئپس ایک پلیس ہولڈر عبارت ہے جو عام طور پر بامقصد مواد پر بھروسہ کیے بغیر کسی دستاویز یا ٹائپفیس کی بصری شکل کو ظاہر کرنے کے لئے استعمال ہوتی ہے۔"
   }
 }
